force-app/main/default/objects/Quote/fields/DSALES_Contado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Contado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente de contado</label>
    <type>Checkbox</type>
</CustomField>