force-app/main/default/objects/Quote/fields/DSales_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_GEX__c</fullName>
    <label>GEX</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Vigencia_meses__c</field>
        <operation>equals</operation>
        <value>12, 24, 36, 48, 60, 72</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>