force-app/main/default/objects/Quote/fields/DSales_Ingresos_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_Ingresos_GEX__c</fullName>
    <label>Ingresos GEX</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Vigencia_meses__c</field>
        <operation>equals</operation>
        <value>12, 24</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>