force-app/main/default/objects/Quote/fields/DSales_Ingresos_productos__c.field-meta.xml
<CustomField>
    <fullName>DSales_Ingresos_productos__c</fullName>
    <label>Ingresos Productos</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Vigencia_meses__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>