force-app/main/default/objects/Quote/fields/DSales_Productos__c.field-meta.xml
<CustomField>
    <fullName>DSales_Productos__c</fullName>
    <label>Productos</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Vigencia_meses__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>